Changed to .net 8

--- a/Pages/_ViewImports.cshtml
+++ b/Pages/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using Projekt_zespołowy
-@namespace Projekt_zespołowy.Pages
+﻿@using _2023pz_trrepo
+@namespace _2023pz_trrepo.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
