--- a/ClientApp/src/styles/Site.css
+++ b/ClientApp/src/styles/Site.css
@@ -7,19 +7,19 @@
     align-items: center;
 }
 
-.cards-container{
+.cards-container {
     width: 100%;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-gap: 20px;
 }
 
-.icons{
+.icons {
     width: 70px;
 }
 
 .link {
-    color: black; 
+    color: black;
     text-decoration: none;
 }
 
@@ -35,6 +35,7 @@
     margin-top: 30px;
     border-radius: 10px;
 }
+
 .my-card {
     background-color: #BFAFA6;
     height: 150px;
@@ -45,16 +46,41 @@
     border-radius: 10px;
     margin-top: 140px;
 }
+
 .my-icons {
     width: 150px;
     margin-left: 20px;
 }
+
 .my-card-text {
     margin-left: 20px;
     margin-right: 20px;
 }
+
 .my-text {
     margin-top: 40px;
 }
 
+.calendar {
+    width: 47rem;
+}
 
+table.lightgrey-weekends tbody {
+    background-color: #ffffff;
+}
+
+    table.lightgrey-weekends tbody td:nth-child(n+6) {
+        background-color: #737373;
+    }
+
+.main-page-dashboard {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 1em;
+}
+
+.dashboard-card__main-section {
+    width: 100%;
+    height: 100%;
+    padding: 40px;
+}
