--- a/ClientApp/src/styles/Site.css
+++ b/ClientApp/src/styles/Site.css
@@ -28,10 +28,14 @@
     text-decoration: none;
 }
 
+.background-my{
+    background-color: #D4D2D5;
+}
+
 .dashboard-card {
     background-color: #D4D2D5;
-    height: 200px;
-    width: 239px;
+    height: 100%;
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -47,9 +51,10 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    align-items: center;
+    padding: 10px;
     border-radius: 10px;
-    margin-top: 140px;
+    margin-top: 5rem;
+    margin-bottom: 5rem;
 }
 
 .my-icons {
@@ -60,6 +65,7 @@
 .my-card-text {
     margin-left: 20px;
     margin-right: 20px;
+    margin-bottom: 0;
 }
 
 .my-text {
